Ignorando linha de header do csv

--- a/logstash/pipeline/infracoes.conf
+++ b/logstash/pipeline/infracoes.conf
@@ -17,7 +17,7 @@ filter {
 
 	csv {
 		
-		
+		skip_header => true	
 		columns => ["infracao","radar","lat","lon","rodovia","concessionaria","velocidade_max","timestamp","velocidade_medida"]
 		convert => {
 			"infracao" => "integer"
@@ -29,16 +29,16 @@ filter {
 			"timestamp" => "date_time"
 		}
 		add_field => ["location", "%{lat},%{lon}"]
+	
 	}	
 }
 
 output {
-
 	elasticsearch {
+		ecs_compatibility => "disabled"
 		hosts => "elasticsearch:9200"
 		user => "elastic"
 		password => "Senh4Segur4"
-		ecs_compatibility => "disabled"
 		index => "infracoes"
 	}
 }
